# Vidcrypt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main_decoder.c  main_encoder.c
builder/: build.bat  build_cuda.bat  build_tests.bat  build_verbose.bat  clean_cuda.bat  fast_rebuild.bat  rebuild.bat
docs/: FORMAT.md  GPU_ACCELERATION.md
src/: backend.c  backend.h  bitstream.c  bitstream.h  calibration.c  calibration.h  crc16.c  crc16.h  decoder.c  decoder.h  encoder.c  encoder.h  ffmpeg_hwdecoder.c  ffmpeg_hwdecoder.h  ffmpeg_pipe.c  ffmpeg_pipe.h  framedecode.c  framedecode.h  framegen.c  framegen.h  gpu_backend.c  gpu_backend.h  gpu_kernels.cu  gpu_kernels.h  gpu_nvenc.c  gpu_nvenc.h  gpu_presets.c  gpu_presets.h  libav_decoder.c  libav_decoder.h  logutil.c  logutil.h  profiling.c  profiling.h  pthread.h  reedsolomon.c  reedsolomon.h  sha256.c  sha256.h  simd_decode.c  (+3 more)
tests/: test_bitstream.c  test_crc16.c  test_decode.c  test_reedsolomon.c
